# Network-traffic-trace-repository

./: .gitignore  ReadMe.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  backup_before_reset.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9f052ac1243c_indexes_for_raw_search.py  bdba22b95b7e_init_schema.py  bebe52434fef_add_raw_trace_parts_and_labeled_trace_.py  ce4ee8bdae9b_add_original_filename_to_files.py  f44984716d06_add_name_to_raw_groups.py  fd5c5194ff0e_add_labeled_traces.py
backend/app/: config.py  db.py  deps_auth.py  main.py  security.py
backend/app/models/: __init__.py  file_object.py  labeled_job.py  labeled_trace.py  labeled_trace_source.py  raw_group.py  raw_trace.py  user.py
backend/app/routers/: auth.py  labeled_traces.py  raw_groups.py  raw_traces.py  users.py
backend/app/schemas/: auth.py  labeled_trace.py  raw_group.py  raw_trace.py  user.py
backend/app/services/: cleanup.py  pcap_meta.py  raw_trace_tasks.py
backend/loadtests/: locustfile.py  render_results.py  run_series.py
backend/tests/: conftest.py  test_auth.py  test_labeled_traces.py  test_raw_groups.py  test_raw_traces.py  test_users.py
traffic-frontend/: .dockerignore  index.html  package-lock.json  package.json
traffic-frontend/src/: App.css  App.jsx  index.css  styles.css
traffic-frontend/src/api/: client.js
traffic-frontend/src/auth/: AuthContext.jsx
traffic-frontend/src/components/: CreateGroupForm.jsx  Layout.jsx  NavBar.jsx  ProtectedRoute.jsx  TraceExportModal.jsx
(+5 files in other folders)
