[project]
name = "trace-repo-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "bcrypt==3.2.2",
  "dpkt>=1.9.8",
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

loadtest = [
  "locust>=2.31",
]

dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "locust>=2.31",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]